--- a/practicas/portafolio/css/stylos.css
+++ b/practicas/portafolio/css/stylos.css
@@ -5,7 +5,7 @@
 
 body {
     background: #fff;
-    font-family: "Pacifico", sans-serif, cursive ;
+    font-family: "Montserrat", sans-serif;
     font-size: 16px;
 }
 
@@ -62,7 +62,7 @@ header .contenedor-texto .texto {
 header .contenedor-texto .texto h1,
 header .contenedor-texto .texto h2 {
     color: #fff;
-    font-weight: 400;
+    font-weight: 300;
     margin: 0;
 }
 
@@ -99,7 +99,7 @@ header .contenedor-texto .texto .profesion {
 
 .main .acerca-de .texto {
     color: #5A5A5A;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 1em;
     line-height: 30px;
     width: 80%;
@@ -110,17 +110,162 @@ header .contenedor-texto .texto .profesion {
     font-size: 34px;
     line-height: 34px;
     margin-bottom: 40px;
-    font-weight: 400;
+    font-weight: 300;
     color:  #DD8200 ;
     text-align: center;
 }
 
-.main .acerca-de .texto .titulo .bold {
+.main .acerca-de .texto .bold {
     color: #3895ea;
     text-decoration: underline;
 }
 
+.main .trabajos {
+    background: #f2f2f2;
+    padding: 60px;
+}
 
+.main .trabajos .contenedor {
+    overflow: hidden;
+}
 
+.main .trabajos .titulo {
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 60px;
+    font-weight: 300;
+    color:  #DD8200 ;
+    text-align: center;
+}
 
+.main .trabajos .contenedor-trabajos {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+.main .trabajos .contenedor-trabajos .trabajo {
+    width: 23%;
+    margin-bottom: 40px;
+}
+
+.main .trabajos .contenedor-trabajos .trabajo .thumb {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.main .trabajos .contenedor-trabajos .trabajo .thumb img {
+    width: 100%;
+    vertical-align: top;
+    border-radius: 3px ;
+}
+
+.main .trabajos .contenedor-trabajos .trabajo .descripcion {
+    text-align: center;
+}
+
+.main .trabajos .contenedor-trabajos .trabajo .descripcion .nombre {
+    font-weight: 700;
+    color: #3895ea;
+    margin-bottom: 10px;
+}
+
+.main .trabajos .contenedor-trabajos .trabajo .descripcion .categoria {
+    font-size: 14px;
+    color: #636363;
+}
+
+/*..... ...... FOOTER ...... ...... */
+
+footer .contacto {
+    padding: 60px 0;
+}
+
+footer .contacto .titulo {
+    font-size: 34px;
+    line-height: 34px;
+    margin-bottom: 60px;
+    font-weight: 300;
+    color:  #3895ea ;
+    text-align: center;
+}
+
+footer .contacto .formulario {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+footer .contacto .formulario input[type="text"],
+footer .contacto .formulario input[type="email"],
+footer .contacto .formulario textarea {
+    border: 2px solid #cecece;
+    border-radius: 5px;
+    padding: 15px 20px;
+    font-size: 20px;
+    color: #a4a4a4;
+}
+
+footer .contacto .formulario input[type="text"]:focus,
+footer .contacto .formulario input[type="email"]:focus,
+footer .contacto .formulario textarea:focus {
+    border: 2px solid #3895ea;
+}
+
+footer .contacto .formulario input[type="text"],
+footer .contacto .formulario input[type="email"] {
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+footer .contacto .formulario textarea  {
+    width: 100%;
+    height: 100px;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100px;
+    max-height: 300px;
+    margin-bottom:  15px;
+}
+
+footer .contacto .formulario .boton {
+    margin: auto;
+    background: #3895ea;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    padding:  15px 40px;
+    cursor: pointer;
+}
+
+footer .contacto .formulario .boton:hover {
+    background: #387bea;
+}
+
+footer .redes-sociales {
+    background: #2b2d42;
+    padding:  60px 0;
+}
+
+footer .redes-sociales .contenedor {
+    display: flex;
+    justify-content: center;
+}
+
+footer .redes-sociales a {
+    color: #fff;
+    text-align: center;
+    width: 100px;
+    display: block;
+    padding: 15px 0;
+    border-radius: 3px;
+    font-size: 30px;
+    margin: 0 20px;
+}
+
+footer .redes-sociales .twitter:hover { background: #1da1f2;}
+footer .redes-sociales .facebook:hover { background: #3b5998;}
+footer .redes-sociales .youtube:hover { background: #cd201f;}
+footer .redes-sociales .github:hover { background: #666666;}
+footer .redes-sociales .instagram:hover { background: #3f729b;}
